Fix broken IT
Signed-off-by: Chen Dai <daichen@amazon.com>